I did the full sidebar with the routes to the different pages. One thing youll probably see is that the app.js file looks really weird. Im sorry i had to change it alot in order for the routes to work with our code so ill try my best to explain it when i get up.

--- a/groupify/src/components/DashboardUI/Dashboard.css
+++ b/groupify/src/components/DashboardUI/Dashboard.css
@@ -9,5 +9,30 @@
     font-family: "sen",sans-serif;
     font-size:3.5em;
     padding-top:60px;
-    padding-left:107px;
+    padding-left:400px;
+    text-shadow: 3px 3px 11px rgba(0, 0, 0, 0.3);
+}
+
+.rectangle {
+    width: 500px; 
+    height: 600px; 
+    background-color: #ffffff;
+    border: 2px none #000; 
+    padding: 100px;
+    margin-top: 50px;
+    margin-left: 400px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.rectangle2 {
+    width: 500px; 
+    height: 600px; 
+    background-color: #ffffff;
+    border: 2px none #000; 
+    padding: 100px;
+    margin-top: -600px;
+    margin-left: 1100px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
 }
