--- a/groupify/src/components/DashboardUI/Dashboard.css
+++ b/groupify/src/components/DashboardUI/Dashboard.css
@@ -10,23 +10,25 @@
     font-size:3.5em;
     padding-top:60px;
     padding-left:400px;
+    padding-right: 400px;
     text-shadow: 3px 3px 11px rgba(0, 0, 0, 0.3);
 }
 
-.rectangle {
-    width: 500px; 
+/* .rectangle {
+    width: 800px; 
     height: 600px; 
     background-color: #ffffff;
     border: 2px none #000; 
     padding: 100px;
     margin-top: 50px;
-    margin-left: 400px;
+    margin-left: 200px;
     border-radius: 10px;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+    
 }
 
 .rectangle2 {
-    width: 500px; 
+    width: 800px; 
     height: 600px; 
     background-color: #ffffff;
     border: 2px none #000; 
@@ -34,5 +36,40 @@
     margin-top: -600px;
     margin-left: 1100px;
     border-radius: 10px;
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3); 
+} */
+
+.container{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%; /* Ensure full width */
+    max-width: 90%; /* Prevents container from being wider than the viewport */
+    height: 100%;
+    max-height: 90%;
+    margin: 30px; /* Removes default margins */
+    padding: 10px; /* Removes default padding */
+    box-sizing: border-box; 
+    border: dashed;
+    margin-left: auto;
+    margin-right: auto;
+    
 }
+
+.rectangle, .rectangle2{
+    height: 900px;
+    width: 900px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3); 
+    border-radius: 10px;
+    margin: 10px;
+}
+
+/* .rectangle2{
+    height: 900px;
+    width: 900px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3); 
+    border-radius: 10px;
+    margin: 10px;
+
+} */
