--- a/groupify/src/components/DashboardUI/Dashboard.css
+++ b/groupify/src/components/DashboardUI/Dashboard.css
@@ -41,35 +41,26 @@
 
 .container{
     display: flex;
-    flex-wrap: wrap;
-    width: 100%; /* Ensure full width */
-    max-width: 90%; /* Prevents container from being wider than the viewport */
-    height: 100%;
-    max-height: 90%;
-    margin: 30px; /* Removes default margins */
-    padding: 10px; /* Removes default padding */
-    box-sizing: border-box; 
-    border: dashed;
-    margin-left: auto;
-    margin-right: auto;
-    
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nonwrap;
+    width: 90vw;
+    max-width: 100%;
+    height: 90vh;
+    max-height: 100%;
+    margin: auto;
+    padding: 20px;
 }
 
 .rectangle, .rectangle2{
-    height: 900px;
-    width: 900px;
+    flex: 1;
+    min-width: 300px;
+    max-width: 45vw;
+    height: 90vh;
     background-color: rgb(255, 255, 255);
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3); 
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
     margin: 10px;
+    position: relative;
 }
 
-/* .rectangle2{
-    height: 900px;
-    width: 900px;
-    background-color: rgb(255, 255, 255);
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3); 
-    border-radius: 10px;
-    margin: 10px;
-
-} */
