--- a/groupify/src/components/Messages/MessageUI.css
+++ b/groupify/src/components/Messages/MessageUI.css
@@ -1,43 +1,13 @@
-.bars{
-    position:absolute;
-    top: 15px;
-    left:20px;
-    width: 50px;
-}
 
-.introName{
+.Title{
+    display: flex;
     font-family: "sen",sans-serif;
     font-size:3.5em;
     padding-top:60px;
-    padding-left:400px;
+    padding-left:275px;
     padding-right: 400px;
     text-shadow: 3px 3px 11px rgba(0, 0, 0, 0.3);
 }
-
-/* .rectangle {
-    width: 800px; 
-    height: 600px; 
-    background-color: #ffffff;
-    border: 2px none #000; 
-    padding: 100px;
-    margin-top: 50px;
-    margin-left: 200px;
-    border-radius: 10px;
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
-    
-}
-
-.rectangle2 {
-    width: 800px; 
-    height: 600px; 
-    background-color: #ffffff;
-    border: 2px none #000; 
-    padding: 100px;
-    margin-top: -600px;
-    margin-left: 1100px;
-    border-radius: 10px;
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3); 
-} */
 
 .container{
     display: flex;
@@ -53,17 +23,7 @@
     margin-top: 40px;
 }
 
-.rectangle{
-    min-width: 60%;
-    max-width: 45vw;
-    height: 80vh;
-    background-color: rgb(255, 255, 255);
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
-    margin: 10px;
-    position: relative;
-}
-.rectangle2{
+.dms{
     min-width: 30%;
     max-width: 45vw;
     height: 80vh;
@@ -73,4 +33,13 @@
     margin: 10px;
     position: relative;
 }
-
+.currMessage{
+    min-width: 60%;
+    max-width: 45vw;
+    height: 80vh;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    margin: 10px;
+    position: relative;
+}
