--- a/groupify/src/App.css
+++ b/groupify/src/App.css
@@ -43,7 +43,7 @@
 
 .nav-menu {
   background-color: #FFFADE;
-  width: 450px;
+  width: 200px;
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -63,7 +63,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  padding: 50px 0px 30px 16px;
+  padding: 30px 0px 20px 16px;
   list-style: none;
   height: 60px;
 }
@@ -71,12 +71,12 @@
 .nav-text a {
   text-decoration: none;
   color: #151414;
-  font-size: 35px;
+  font-size: 20px;
   width: 95%;
   height: 100%;
   display: flex;
   align-items: center;
-  padding: 0 16px;
+  padding: 0 10px;
   border-radius: 4px;
 }
 
@@ -106,7 +106,7 @@ span {
   display: flex;
   gap: 2rem;
   list-style: none;
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 
 .nav-links a{
@@ -114,7 +114,7 @@ span {
   color: #151414;
   padding: 0 16px;
   border-radius: 4px;
-  font-size: xx-large;
+  font-size: large;
 }
 
 .nav-links a:hover{
