--- a/groupify/src/components/DashboardUI/Dashboard.css
+++ b/groupify/src/components/DashboardUI/Dashboard.css
@@ -74,3 +74,17 @@
     position: relative;
 }
 
+ul {
+    list-style-type: none;
+    padding-left: 0;
+    
+}
+
+li {
+    margin: 10px 0;
+    margin-left: 10px;
+}
+
+button {
+    margin-left: 10px;
+}
